# Chess_cpp

./: CMakeLists.txt  LICENSE  README.md  README_ES.md  setup.sh
src/: board.cc  board.h  main.cc  pieces.cc  pieces.h
src/Basement/: Board.cc  Board.h  Pieces.cc  Pieces.h
src/Basement/Board/: Board.cc  Board.h
src/Main/: Main.cc
src/Pieces/: Pieces.cc  Pieces.h
src/Pieces/Pieces_CC/: Bishop.cc  King.cc
src/Pieces/Pieces_H/: Bishop.h  King.h
src/States/Position/: Position.cc  Position.h
src/basement/: Board.cc  Board.h  Pieces.cc  Pieces.h
src/main/: Main.cc
src/utils/: Position.h
test/Main/: Main_test.cc  main_test.cc
test/Movement/: Bishop_test.cc  King_test.cc  Knight_test.cc  Pawn_test.cc  Queen_test.cc  Rook_test.cc
